--- a/first-steps/03-backgrounds/index.html
+++ b/first-steps/03-backgrounds/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="box">
-            <h1>Backgrounds in CSS</h1>
+            <h1>Backgrounds in CSS <br> This is another line</h1>
         </div>
         <h2>Bla bla bla... part of the web BLA</h2>
         <p>
