--- a/first-steps/04-boxes/index.html
+++ b/first-steps/04-boxes/index.html
@@ -7,12 +7,59 @@
     </head>
     <body>
         <h1>Boxes in html</h1>
+
+        <!-- 
         <div id="box1">
             <p>Box contents 1</p>
         </div>
         <section id="box2">
             <p>Box contents 2</p>
         </section>
+        -->
+        <!-- Floated elements -->
+        <section id="boxes">
+            <div class="box">
+                <p>Box contents 1</p>
+            </div>
+            <div class="box">
+                <p>Box contents 2</p>
+            </div>
+            <div class="box">
+                <p>Box contents 3</p>
+            </div>
+            <div class="box">
+                <p>Box contents 4</p>
+            </div>
+            <div class="box">
+                <p>Box contents 5</p>
+            </div>
+            <div class="box">
+                <p>Box contents 6</p>
+            </div>
+            <div class="box">
+                <p>Box contents 7</p>
+            </div>
+            <div class="box">
+                <p>Box contents 8</p>
+            </div>
+            <div class="box">
+                <p>Box contents 9</p>
+            </div>
+            <!-- Clean floats -->
+         <div class="clearfix"></div>
+        </section>
+
+        <!-- Clean floats -->
+         <!-- <div class="clearfix"></div> -->
+        
+        <!-- <section class="box">
+            <p>Box contents 2</p>
+        </section> -->
+        <!-- <h2 class="box">Box contents 3</h2>
+        <h2 class="box">Box contents 4</h2> -->
+        <!-- Non-floated elements -->
+        <h2>Content after the positioned boxes that stay down</h2>
+        <p>Test text</p>
     </body>
 
 </html>
