--- a/first-steps/05-exercises/index.html
+++ b/first-steps/05-exercises/index.html
@@ -1,8 +1,63 @@
 <!DOCTYPE html>
-<html>
+<html lang="us">
     <head>
         <meta charset="utf-8">
         <title>Exercise</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
+    <body>
+        <div id="general">
+            <header id="header">
+                <h1>THIS IS A TEST YEAHHH</h1>        
+            </header>
+            <nav id="nav">
+                <ul>
+                    <li><a href="#">Main</a></li>
+                    <li><a href="#">Articles</a></li>
+                    <li><a href="#">Categories</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+                <div class="clearfix"></div>
+            </nav>
+            <section id="content">
+                <h1>Main content's boxes</h1>
+                <div class="box">
+                    <h2>Box one</h2>
+                </div>
+                <div class="box">
+                    <h2>Box two</h2>
+                </div>
+                <div class="box">
+                    <h2>Box tree</h2>
+                </div>
+                <div class="box">
+                    <h2>Box four</h2>
+                </div>
+                <div class="box">
+                    <h2>Box five</h2>
+                </div>
+                <div class="box">
+                    <h2>Box six</h2>
+                </div>
+                <div class="box">
+                    <h2>Box seven</h2>
+                </div>
+                <div class="box">
+                    <h2>Box eight</h2>
+                </div>
+            </section>
+
+            <aside id="aside">
+                <div class="box">
+                    <h2>Side bar's element</h2>
+                </div>
+            </aside>
+            <div class="clearfix"></div>
+            <footer id="footer">
+                All rights reserved &copy; jatsodev
+            </footer>
+
+        </div>
+       
+    </body>
 </html>
