pseudoclasses-animations-transitions

--- a/first-steps/05-exercises/index.html
+++ b/first-steps/05-exercises/index.html
@@ -1,63 +1,108 @@
 <!DOCTYPE html>
 <html lang="us">
-    <head>
-        <meta charset="utf-8">
-        <title>Exercise</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
-    </head>
-    <body>
-        <div id="general">
-            <header id="header">
-                <h1>THIS IS A TEST YEAHHH</h1>        
-            </header>
-            <nav id="nav">
-                <ul>
-                    <li><a href="#">Main</a></li>
-                    <li><a href="#">Articles</a></li>
-                    <li><a href="#">Categories</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-                <div class="clearfix"></div>
-            </nav>
-            <section id="content">
-                <h1>Main content's boxes</h1>
-                <div class="box">
-                    <h2>Box one</h2>
-                </div>
-                <div class="box">
-                    <h2>Box two</h2>
-                </div>
-                <div class="box">
-                    <h2>Box tree</h2>
-                </div>
-                <div class="box">
-                    <h2>Box four</h2>
-                </div>
-                <div class="box">
-                    <h2>Box five</h2>
-                </div>
-                <div class="box">
-                    <h2>Box six</h2>
-                </div>
-                <div class="box">
-                    <h2>Box seven</h2>
-                </div>
-                <div class="box">
-                    <h2>Box eight</h2>
-                </div>
-            </section>
+	<head>
+		<meta charset="utf-8" />
+		<title>Exercise</title>
+		<link
+			rel="stylesheet"
+			type="text/css"
+			href="style.css"
+		/>
+	</head>
+	<body>
+		<div id="general">
+			<header id="header">
+				<h1>THIS IS A TEST YEAHHH</h1>
+			</header>
+			<nav id="nav">
+				<ul>
+					<li><a href="#">Main</a></li>
+					<li><a href="#">Articles</a></li>
+					<li><a href="#">Categories</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+				<div class="clearfix"></div>
+			</nav>
+			<section id="content">
+				<h1>Main content's boxes</h1>
+				<div class="box">
+					<h2>Box one</h2>
+				</div>
+				<div class="box inner-shadow">
+					<h2>Box two</h2>
+				</div>
+				<div class="box">
+					<h2>Box tree</h2>
+				</div>
+				<div class="box">
+					<h2>Box four</h2>
+				</div>
+				<div class="box">
+					<h2>Box five</h2>
+				</div>
+				<div class="box">
+					<h2>Box six</h2>
+				</div>
+				<div class="box">
+					<h2>Box seven</h2>
+				</div>
+				<div class="box">
+					<h2>Box eight</h2>
+				</div>
+			</section>
 
-            <aside id="aside">
-                <div class="box">
-                    <h2>Side bar's element</h2>
-                </div>
-            </aside>
-            <div class="clearfix"></div>
-            <footer id="footer">
-                All rights reserved &copy; jatsodev
-            </footer>
-
-        </div>
-       
-    </body>
+			<aside id="aside">
+				<div class="box">
+					<h2>Side bar's element</h2>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
+						accumsan dolor nec vehicula efficitur. Sed eget efficitur sapien.
+						Fusce turpis dui, rhoncus nec erat vitae, consectetur pellentesque
+						massa. Duis sed rutrum sapien. Nulla sit amet est facilisis, maximus
+						purus eget, tristique risus. Praesent ornare leo tempus nisi
+						convallis pulvinar. Morbi tortor massa, hendrerit vitae ultricies
+						quis, aliquam nec eros. Nullam quis nisl diam. Cras hendrerit semper
+						velit ut efficitur. Ut volutpat est in sapien lacinia, pharetra
+						consectetur tellus ullamcorper. Donec ac lacus volutpat, luctus
+						magna id, pretium neque. Sed efficitur erat nulla. Cras et malesuada
+						ligula. Cras iaculis nunc quis tellus semper, pulvinar lacinia velit
+						egestas. Maecenas ullamcorper pretium elit, vitae tempor dolor
+						tincidunt eu. Aliquam erat volutpat. Morbi commodo orci at turpis
+						vehicula, ut tempor quam accumsan. Quisque blandit libero ligula,
+						non fringilla tortor interdum vel. Integer mollis auctor felis, et
+						finibus nulla blandit eu. In finibus lorem interdum, molestie justo
+						vitae, elementum turpis. Donec laoreet nunc orci, eu vestibulum mi
+						blandit ac. Donec varius in urna sit amet lobortis. Mauris elit
+						ligula, pulvinar ut magna sed, tincidunt lacinia sem. Praesent at
+						tincidunt ipsum, in maximus sapien. Praesent metus sem, ornare nec
+						mauris sit amet, scelerisque fermentum urna. Duis id feugiat justo.
+						Pellentesque sit amet enim ut tortor consectetur bibendum. Integer
+						at augue efficitur, aliquet nulla tempor, cursus erat. Pellentesque
+						a magna eget urna elementum ornare. Nulla et pharetra libero. Morbi
+						quis enim rutrum, accumsan dolor id, ultrices enim. Aenean enim
+						urna, sodales et neque quis, volutpat venenatis elit. Praesent quis
+						arcu mollis, bibendum nisi id, dictum metus. Fusce eu arcu id nibh
+						mollis ullamcorper vel vitae ligula. Interdum et malesuada fames ac
+						ante ipsum primis in faucibus. Sed nec nulla mi. Curabitur quis elit
+						nec purus varius tempus non in massa. Duis vel augue odio. Etiam ut
+						mi ac nunc bibendum convallis a id mi. Curabitur felis odio, gravida
+						et velit ac, porttitor euismod elit. Pellentesque congue hendrerit
+						magna, at auctor ex volutpat in. Suspendisse aliquet ut mi ut
+						porttitor. Vivamus vitae elit libero. Phasellus molestie et massa ac
+						ornare. Sed ac libero dignissim, porta diam vel, fermentum urna.
+						Etiam dignissim a nunc vel tristique. Vivamus nec mattis odio,
+						sodales placerat felis. Duis suscipit, arcu nec aliquet viverra,
+						libero nunc fringilla lacus, ac venenatis ante nisl eu purus. Duis
+						ante libero, dapibus vel facilisis in, imperdiet ut mi. Aenean
+						gravida pellentesque sem, nec venenatis tellus commodo ac.
+					</p>
+				</div>
+			</aside>
+			<div class="clearfix"></div>
+			<footer id="footer">All rights reserved &copy; jatsodev</footer>
+		</div>
+		<div class="free free1">I'm the free box</div>
+		<div class="free free2">I'm the free box</div>
+		<div class="fixed">I'm the fixed box</div>
+	</body>
 </html>
