--- a/layout-1/index.html
+++ b/layout-1/index.html
@@ -33,9 +33,28 @@
                 </li>
                 <li>
                     <a href="index.html">Languages</a>
+                    <ul>
+                        <li>
+                            <a href="index.html">HTML</a>
+                        </li>
+                        <li>
+                            <a href="index.html">CSS</a>
+                        </li>
+                    </ul>
                 </li>
                 <li>
                     <a href="index.html">Frameworks</a>
+                    <ul>
+                        <li>
+                            <a href="index.html">SASS</a>
+                        </li>
+                        <li>
+                            <a href="index.html">LESS</a>
+                        </li>
+                        <li>
+                            <a href="index.html">Bootstrap</a>
+                        </li>
+                    </ul>
                 </li>
                 <li>
                     <a href="index.html">Projects</a>
