--- a/layout-1/index.html
+++ b/layout-1/index.html
@@ -72,6 +72,71 @@
         </nav>
 
         <!-- End of Navigation Menu -->
+        <!-- Start of core content -->
+        <div id="content">
+            <!-- Start of sidebar -->
+             <aside id="aside">
+                <div class="widget" id="login">
+                    <h3>Enter to de website</h3>
+                    <form>
+                        <label>User:</label>
+                        <input type="text"/>
+                        <label>Password:</label>
+                        <input type="password">
+                        <input type="submit" value="Login">
+                    </form>
+                    <a href="#">Student Area</a>
+                    <a href="#">Teacher Area</a>
+                    <a href="#">Access to grades</a>
+                </div>
+                <div class="widget" id="login">
+                    <h3 class="blue">Virtual Classroom 1</h3>
+                    <form>
+                        <label>User name:</label>
+                        <input type="text"/>
+                        <label>Password:</label>
+                        <input type="password">
+                        <input type="submit" value="Login">
+                    </form>
+                </div>
+                <div class="widget" id="login">
+                    <h3 class="red">Virtual Classroom 2</h3>
+                    <form>
+                        <label>User name:</label>
+                        <input type="text"/>
+                        <label>Password:</label>
+                        <input type="password">
+                        <input type="submit" value="Login">
+                    </form>
+                </div>
+                <div class="widget" id="login">
+                    <h3>Interesting links</h3>
+                    <ul>
+                        <li>
+                            <a href="#">Master in Javascript</a>
+                        </li>
+                        <li>
+                            <a href="#">Master in PHP</a>
+                        </li>
+                        <li>
+                            <a href="#">Master in Full-Stack Web</a>
+                        </li>
+                        <li>
+                            <a href="#">Master in JS Frameworks</a>
+                        </li>
+                        <li>
+                            <a href="#">Master in Git and Linux commands</a>
+                        </li>
+                    </ul>
+                </div>
+             </aside>
+             <aside id="phrase">
+                "I'm going to keep playing … just keep playing, keep moving on. That's not going to ever limit me. I've got to keep going out there and being the best player I can for my team." Jordan Love QB Green Bay Packers
+                <a href="#">Read more phrases</a>
+             </aside>
+            <!-- End of sidebar -->
+        </div>
+        <!-- End of core content -->
 
     </body>
 </html>
