html core section

--- a/layout-1/index.html
+++ b/layout-1/index.html
@@ -135,6 +135,120 @@
                 <a href="#">Read more phrases</a>
              </aside>
             <!-- End of sidebar -->
+            <!-- Start of sections -->
+             <div id="sections">
+                <section id="frontend">
+                    <span class="stickers">
+                        <img class="StickerOne" src="img/scotch.png" alt="Sticker">
+                        <img class="StickerTwo" src="img/scotch.png" alt="Sticker">
+                    </span>
+                    <h2 class="title">Frontend news</h2>
+                    <article class="article">
+                        <p>
+                            <a href="#">Entry title</a>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, aliquet et lectus interdum, elementum condimentum nibh. Nullam ac pretium felis. Sed at felis magna. Morbi pellentesque auctor tortor in cursus. Nunc sed erat sit amet dui cursus semper at eget magna. In a lectus et elit feugiat sodales. Quisque gravida fringilla dictum. Suspendisse potenti.     
+                        </p>
+                        <span class="date">[20-10-2024. Jatsodev]</span>
+                    </article>
+                    <article class="article">
+                        <p>
+                            <a href="#">Entry title</a>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, aliquet et lectus interdum, elementum condimentum nibh. Nullam ac pretium felis. Sed at felis magna. Morbi pellentesque auctor tortor in cursus. Nunc sed erat sit amet dui cursus semper at eget magna. In a lectus et elit feugiat sodales. Quisque gravida fringilla dictum. Suspendisse potenti.     
+                        </p>
+                        <span class="date">[20-10-2024. Jatsodev]</span>
+                    </article>
+                    <article class="article">
+                        <p>
+                            <a href="#">Entry title</a>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, aliquet et lectus interdum, elementum condimentum nibh. Nullam ac pretium felis. Sed at felis magna. Morbi pellentesque auctor tortor in cursus. Nunc sed erat sit amet dui cursus semper at eget magna. In a lectus et elit feugiat sodales. Quisque gravida fringilla dictum. Suspendisse potenti.     
+                        </p>
+                        <span class="date">[20-10-2024. Jatsodev]</span>
+                    </article>
+                    <article class="article">
+                        <p>
+                            <a href="#">Entry title</a>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, aliquet et lectus interdum, elementum condimentum nibh. Nullam ac pretium felis. Sed at felis magna. Morbi pellentesque auctor tortor in cursus. Nunc sed erat sit amet dui cursus semper at eget magna. In a lectus et elit feugiat sodales. Quisque gravida fringilla dictum. Suspendisse potenti.     
+                        </p>
+                        <span class="date">[20-10-2024. Jatsodev]</span>
+                    </article>
+
+                </section>
+                <section id="sensei">
+                    <span class="stickers">
+                        <img class="StickerOne" src="img/scotch.png" alt="Sticker">
+                        <img class="StickerTwo" src="img/scotch.png" alt="Sticker">
+                    </span>
+                    <h2 class="title">Sensei news</h2>
+                    <article class="article">
+                        <p>
+                            <a href="#">Entry title</a>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, aliquet et lectus interdum, elementum condimentum nibh. Nullam ac pretium felis. Sed at felis magna. Morbi pellentesque auctor tortor in cursus. Nunc sed erat sit amet dui cursus semper at eget magna. In a lectus et elit feugiat sodales. Quisque gravida fringilla dictum. Suspendisse potenti.     
+                        </p>
+                        <span class="date">[20-10-2024. Jatsodev]</span>
+                    </article>
+                    <article class="article">
+                        <p>
+                            <a href="#">Entry title</a>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, aliquet et lectus interdum, elementum condimentum nibh. Nullam ac pretium felis. Sed at felis magna. Morbi pellentesque auctor tortor in cursus. Nunc sed erat sit amet dui cursus semper at eget magna. In a lectus et elit feugiat sodales. Quisque gravida fringilla dictum. Suspendisse potenti.     
+                        </p>
+                        <span class="date">[20-10-2024. Jatsodev]</span>
+                    </article>
+                    <article class="article">
+                        <p>
+                            <a href="#">Entry title</a>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, aliquet et lectus interdum, elementum condimentum nibh. Nullam ac pretium felis. Sed at felis magna. Morbi pellentesque auctor tortor in cursus. Nunc sed erat sit amet dui cursus semper at eget magna. In a lectus et elit feugiat sodales. Quisque gravida fringilla dictum. Suspendisse potenti.     
+                        </p>
+                        <span class="date">[20-10-2024. Jatsodev]</span>
+                    </article>
+                    <article class="article">
+                        <p>
+                            <a href="#">Entry title</a>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, aliquet et lectus interdum, elementum condimentum nibh. Nullam ac pretium felis. Sed at felis magna. Morbi pellentesque auctor tortor in cursus. Nunc sed erat sit amet dui cursus semper at eget magna. In a lectus et elit feugiat sodales. Quisque gravida fringilla dictum. Suspendisse potenti.     
+                        </p>
+                        <span class="date">[20-10-2024. Jatsodev]</span>
+                    </article>
+
+                </section>
+                <section id="backend">
+                    <span class="stickers">
+                        <img class="StickerOne" src="img/scotch.png" alt="Sticker">
+                        <img class="StickerTwo" src="img/scotch.png" alt="Sticker">
+                    </span>
+                    <h2 class="title">Backend news</h2>
+                    <article class="article">
+                        <p>
+                            <a href="#">Entry title</a>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, aliquet et lectus interdum, elementum condimentum nibh. Nullam ac pretium felis. Sed at felis magna. Morbi pellentesque auctor tortor in cursus. Nunc sed erat sit amet dui cursus semper at eget magna. In a lectus et elit feugiat sodales. Quisque gravida fringilla dictum. Suspendisse potenti.     
+                        </p>
+                        <span class="date">[20-10-2024. Jatsodev]</span>
+                    </article>
+                    <article class="article">
+                        <p>
+                            <a href="#">Entry title</a>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, aliquet et lectus interdum, elementum condimentum nibh. Nullam ac pretium felis. Sed at felis magna. Morbi pellentesque auctor tortor in cursus. Nunc sed erat sit amet dui cursus semper at eget magna. In a lectus et elit feugiat sodales. Quisque gravida fringilla dictum. Suspendisse potenti.     
+                        </p>
+                        <span class="date">[20-10-2024. Jatsodev]</span>
+                    </article>
+                    <article class="article">
+                        <p>
+                            <a href="#">Entry title</a>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, aliquet et lectus interdum, elementum condimentum nibh. Nullam ac pretium felis. Sed at felis magna. Morbi pellentesque auctor tortor in cursus. Nunc sed erat sit amet dui cursus semper at eget magna. In a lectus et elit feugiat sodales. Quisque gravida fringilla dictum. Suspendisse potenti.     
+                        </p>
+                        <span class="date">[20-10-2024. Jatsodev]</span>
+                    </article>
+                    <article class="article">
+                        <p>
+                            <a href="#">Entry title</a>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, aliquet et lectus interdum, elementum condimentum nibh. Nullam ac pretium felis. Sed at felis magna. Morbi pellentesque auctor tortor in cursus. Nunc sed erat sit amet dui cursus semper at eget magna. In a lectus et elit feugiat sodales. Quisque gravida fringilla dictum. Suspendisse potenti.     
+                        </p>
+                        <span class="date">[20-10-2024. Jatsodev]</span>
+                    </article>
+
+                </section>
+
+             </div>
+            <!-- End of sections -->
+
         </div>
         <!-- End of core content -->
 
