First layout done

--- a/layout-1/index.html
+++ b/layout-1/index.html
@@ -130,20 +130,17 @@
                     </ul>
                 </div>
              </aside>
-             <aside id="phrase">
-                "I'm going to keep playing … just keep playing, keep moving on. That's not going to ever limit me. I've got to keep going out there and being the best player I can for my team." Jordan Love QB Green Bay Packers
-                <a href="#">Read more phrases</a>
-             </aside>
             <!-- End of sidebar -->
             <!-- Start of sections -->
              <div id="sections">
                 <section id="frontend">
                     <span class="stickers">
-                        <img class="StickerOne" src="img/scotch.png" alt="Sticker">
-                        <img class="StickerTwo" src="img/scotch.png" alt="Sticker">
+                        <img class="stickerOne" src="img/scotch.png" alt="Sticker">
+                        <img class="stickerTwo" src="img/scotch.png" alt="Sticker">
                     </span>
                     <h2 class="title">Frontend news</h2>
                     <article class="article">
+                        <span class="icon">a</span>
                         <p>
                             <a href="#">Entry title</a>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, aliquet et lectus interdum, elementum condimentum nibh. Nullam ac pretium felis. Sed at felis magna. Morbi pellentesque auctor tortor in cursus. Nunc sed erat sit amet dui cursus semper at eget magna. In a lectus et elit feugiat sodales. Quisque gravida fringilla dictum. Suspendisse potenti.     
@@ -151,6 +148,7 @@
                         <span class="date">[20-10-2024. Jatsodev]</span>
                     </article>
                     <article class="article">
+                        <span class="icon">a</span>
                         <p>
                             <a href="#">Entry title</a>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, aliquet et lectus interdum, elementum condimentum nibh. Nullam ac pretium felis. Sed at felis magna. Morbi pellentesque auctor tortor in cursus. Nunc sed erat sit amet dui cursus semper at eget magna. In a lectus et elit feugiat sodales. Quisque gravida fringilla dictum. Suspendisse potenti.     
@@ -158,6 +156,7 @@
                         <span class="date">[20-10-2024. Jatsodev]</span>
                     </article>
                     <article class="article">
+                        <span class="icon">a</span>
                         <p>
                             <a href="#">Entry title</a>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, aliquet et lectus interdum, elementum condimentum nibh. Nullam ac pretium felis. Sed at felis magna. Morbi pellentesque auctor tortor in cursus. Nunc sed erat sit amet dui cursus semper at eget magna. In a lectus et elit feugiat sodales. Quisque gravida fringilla dictum. Suspendisse potenti.     
@@ -165,6 +164,7 @@
                         <span class="date">[20-10-2024. Jatsodev]</span>
                     </article>
                     <article class="article">
+                        <span class="icon">a</span>
                         <p>
                             <a href="#">Entry title</a>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, aliquet et lectus interdum, elementum condimentum nibh. Nullam ac pretium felis. Sed at felis magna. Morbi pellentesque auctor tortor in cursus. Nunc sed erat sit amet dui cursus semper at eget magna. In a lectus et elit feugiat sodales. Quisque gravida fringilla dictum. Suspendisse potenti.     
@@ -175,11 +175,12 @@
                 </section>
                 <section id="sensei">
                     <span class="stickers">
-                        <img class="StickerOne" src="img/scotch.png" alt="Sticker">
-                        <img class="StickerTwo" src="img/scotch.png" alt="Sticker">
+                        <img class="stickerOne" src="img/scotch.png" alt="Sticker">
+                        <img class="stickerTwo" src="img/scotch.png" alt="Sticker">
                     </span>
-                    <h2 class="title">Sensei news</h2>
+                    <h2 class="title orange">Sensei news</h2>
                     <article class="article">
+                        <span class="icon">a</span>
                         <p>
                             <a href="#">Entry title</a>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, aliquet et lectus interdum, elementum condimentum nibh. Nullam ac pretium felis. Sed at felis magna. Morbi pellentesque auctor tortor in cursus. Nunc sed erat sit amet dui cursus semper at eget magna. In a lectus et elit feugiat sodales. Quisque gravida fringilla dictum. Suspendisse potenti.     
@@ -187,6 +188,7 @@
                         <span class="date">[20-10-2024. Jatsodev]</span>
                     </article>
                     <article class="article">
+                        <span class="icon">a</span>
                         <p>
                             <a href="#">Entry title</a>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, aliquet et lectus interdum, elementum condimentum nibh. Nullam ac pretium felis. Sed at felis magna. Morbi pellentesque auctor tortor in cursus. Nunc sed erat sit amet dui cursus semper at eget magna. In a lectus et elit feugiat sodales. Quisque gravida fringilla dictum. Suspendisse potenti.     
@@ -194,6 +196,7 @@
                         <span class="date">[20-10-2024. Jatsodev]</span>
                     </article>
                     <article class="article">
+                        <span class="icon">a</span>
                         <p>
                             <a href="#">Entry title</a>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, aliquet et lectus interdum, elementum condimentum nibh. Nullam ac pretium felis. Sed at felis magna. Morbi pellentesque auctor tortor in cursus. Nunc sed erat sit amet dui cursus semper at eget magna. In a lectus et elit feugiat sodales. Quisque gravida fringilla dictum. Suspendisse potenti.     
@@ -201,6 +204,7 @@
                         <span class="date">[20-10-2024. Jatsodev]</span>
                     </article>
                     <article class="article">
+                        <span class="icon">a</span>
                         <p>
                             <a href="#">Entry title</a>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, aliquet et lectus interdum, elementum condimentum nibh. Nullam ac pretium felis. Sed at felis magna. Morbi pellentesque auctor tortor in cursus. Nunc sed erat sit amet dui cursus semper at eget magna. In a lectus et elit feugiat sodales. Quisque gravida fringilla dictum. Suspendisse potenti.     
@@ -211,11 +215,12 @@
                 </section>
                 <section id="backend">
                     <span class="stickers">
-                        <img class="StickerOne" src="img/scotch.png" alt="Sticker">
-                        <img class="StickerTwo" src="img/scotch.png" alt="Sticker">
+                        <img class="stickerOne" src="img/scotch.png" alt="Sticker">
+                        <img class="stickerTwo" src="img/scotch.png" alt="Sticker">
                     </span>
-                    <h2 class="title">Backend news</h2>
+                    <h2 class="title red">Backend news</h2>
                     <article class="article">
+                        <span class="icon">a</span>
                         <p>
                             <a href="#">Entry title</a>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, aliquet et lectus interdum, elementum condimentum nibh. Nullam ac pretium felis. Sed at felis magna. Morbi pellentesque auctor tortor in cursus. Nunc sed erat sit amet dui cursus semper at eget magna. In a lectus et elit feugiat sodales. Quisque gravida fringilla dictum. Suspendisse potenti.     
@@ -223,6 +228,7 @@
                         <span class="date">[20-10-2024. Jatsodev]</span>
                     </article>
                     <article class="article">
+                        <span class="icon">a</span>
                         <p>
                             <a href="#">Entry title</a>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, aliquet et lectus interdum, elementum condimentum nibh. Nullam ac pretium felis. Sed at felis magna. Morbi pellentesque auctor tortor in cursus. Nunc sed erat sit amet dui cursus semper at eget magna. In a lectus et elit feugiat sodales. Quisque gravida fringilla dictum. Suspendisse potenti.     
@@ -230,6 +236,7 @@
                         <span class="date">[20-10-2024. Jatsodev]</span>
                     </article>
                     <article class="article">
+                        <span class="icon">a</span>
                         <p>
                             <a href="#">Entry title</a>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, aliquet et lectus interdum, elementum condimentum nibh. Nullam ac pretium felis. Sed at felis magna. Morbi pellentesque auctor tortor in cursus. Nunc sed erat sit amet dui cursus semper at eget magna. In a lectus et elit feugiat sodales. Quisque gravida fringilla dictum. Suspendisse potenti.     
@@ -237,6 +244,7 @@
                         <span class="date">[20-10-2024. Jatsodev]</span>
                     </article>
                     <article class="article">
+                        <span class="icon">a</span>
                         <p>
                             <a href="#">Entry title</a>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, aliquet et lectus interdum, elementum condimentum nibh. Nullam ac pretium felis. Sed at felis magna. Morbi pellentesque auctor tortor in cursus. Nunc sed erat sit amet dui cursus semper at eget magna. In a lectus et elit feugiat sodales. Quisque gravida fringilla dictum. Suspendisse potenti.     
@@ -248,9 +256,22 @@
 
              </div>
             <!-- End of sections -->
+             <aside id="phrase">
+                "I'm going to keep playing … just keep playing, keep moving on. That's not going to ever limit me. I've got to keep going out there and being the best player I can for my team." Jordan Love QB Green Bay Packers
+                <a href="#">Read more phrases</a>
+             </aside>
+
+             <div class="clearfix"></div>
+             <div id="history">
+                <a href="#">[See news history]</a>
+             </div>
 
         </div>
         <!-- End of core content -->
-
+        <div class="clearfix"></div>
+        <footer id="footer">
+            <p>&copy; Developed by Jatso </p>
+            <p>More content and training in web development in <a href="#">cemita.com</a></p>
+        </footer>
     </body>
 </html>
