--- a/responsive/index.html
+++ b/responsive/index.html
@@ -27,7 +27,14 @@
                     <article>
                         <h2>Article 4</h2>
                     </article>
+                    <article>
+                        <h2>Article 5</h2>
+                    </article>
+                    <article>
+                        <h2>Article 6</h2>
+                    </article>
                 </section>
+                <div class="clearfix"></div>
             </section>
             <footer>
                 Footer
