layout 2 in progress part 2

--- a/layout-2/index.html
+++ b/layout-2/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <!-- Header start -->
-         <header id="header">
+        <header id="header">
             <div class="wrap">
                 <div id="logo">
                     <span class="gear">S</span>
@@ -24,7 +24,44 @@
                 </nav>
             </div>
             
-         </header>
+        </header>
         <!-- Header end -->
+        <!-- Banner start -->
+            <section class="wrap wrap-content">
+                <section id="info">
+                    <div id="banner">
+                        <h1>Web development course with Jatso</h1>
+                    </div>
+                    <div id="cards">
+                        <div class="card">
+                            <p class="icon">H</p>
+                            <h2 class="category">Web Development</h2>
+                            <p class="description">Learn the main languages ​​for developing websites. Become a web master!!!</p>
+                        </div>
+                        <div class="card">
+                            <p class="icon">_</p>
+                            <h2 class="category">Operating systems</h2>
+                            <p class="description">Learn to manage Linux and Windows systems.</p>
+                        </div>
+                        <div class="card">
+                            <p class="icon">S</p>
+                            <h2 class="category">Hardware</h2>
+                            <p class="description">Get to know the ins and outs of hardware.</p>
+                        </div>
+                        <div class="card">
+                            <p class="icon">u</p>
+                            <h2 class="category">Networks and Internet</h2>
+                            <p class="description">Learn to configure and manage computer networks and servers.</p>
+                        </div>
+                        <div class="card">
+                            <p class="icon">a</p>
+                            <h2 class="category">Databases</h2>
+                            <p class="description">Learn to set up and manage databases.</p>
+                        </div>
+
+                    </div>
+                </section>
+            </section>
+        <!-- Banner end -->
     </body>
 </html>
